--- a/templates/teamjoin.html
+++ b/templates/teamjoin.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="sign-up-head">
-       <a href="{{ url_for('login') }}" class="link-btn" >← 뒤로가기</a> 
+       <a href="{{ url_for('dashboard') }}" class="link-btn" >← 뒤로가기</a> 
         <h2 class="title">팀 가입</h2>
     </div>
 
