team_page에서 team_join

--- a/templates/team_page.html
+++ b/templates/team_page.html
@@ -126,7 +126,7 @@
           <span>글 작성</span>
         </a>
         {% else %}
-        <a href="/team_join" class="button is-info">
+        <a href="/team_join/{{ team.id }}" class="button is-info">
           <span class="icon is-small">
             <i class="fas fa-user-plus"></i>
           </span>
