--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %}
+{% extends "user_input_base.html" %}
 {% block title %}로그인{% endblock %}
+{% block body_class %}{% endblock %}
 {% block content %}
-<h1 class="rock-3d-regular ">WWL <div  class="rock-3d-regular">(Week We Learned)</div></h1>
+<h1 class="rock-3d-regular">WWL <div class="rock-3d-regular">(Week We Learned)</div></h1>
 <div class="container">
     <h2>로그인</h2>
     <form method="post" class="form-box">
@@ -10,7 +11,5 @@
         <button type="submit" class="btn">로그인</button>
     </form>
     <a href="{{ url_for('signup') }}" class="link-btn">회원가입</a>
-    <a href="{{ url_for('teamjoin') }}" class="link-btn">팀 가입</a>
-    <a href="{{ url_for('teamsignup') }}" class="link-btn">팀 생성</a>
 </div>
 {% endblock %}
