--- a/templates/team_page.html
+++ b/templates/team_page.html
@@ -119,7 +119,7 @@
       <!-- 액션 버튼들 -->
       <div class="mb-4">
         {% if is_member %}
-        <a href="/teampagewrite" class="button is-success">
+        <a href="/team_post_write/{{ team.id }}" class="button is-success">
           <span class="icon is-small">
             <i class="fas fa-plus"></i>
           </span>
@@ -153,24 +153,13 @@
           {% if is_member %}
           <div class="buttons" style="position: absolute; top: 10px; right: 10px;">
             <form method="POST" action="/delete_post" style="display: inline;">
-              <input type="hidden" name="post_title" value="{{ post.title }}">
+              <input type="hidden" name="post_id" value="{{ post.id }}">
               <input type="hidden" name="team_id" value="{{ team.id }}">
               <button class="button is-danger is-light is-small" type="submit">삭제</button>
             </form>
-            <a href="/edit_post?title={{ post.title }}&team_id={{ team.id }}" class="button is-info is-light is-small">수정</a>
+            <a href="/edit_post?post_id={{ post.id }}&team_id={{ team.id }}" class="button is-info is-light is-small">수정</a>
           </div>
           {% endif %}
-          
-          <!-- 좋아요 버튼 및 좋아요 수 -->
-          <div class="mt-3 is-flex is-align-items-center">
-            <button class="button is-light is-small" onclick="handleLike(this)">
-              <span class="icon">
-                <i class="fas fa-thumbs-up"></i>
-              </span>
-              <span>좋아요</span>
-            </button>
-            <span class="ml-2 has-text-grey is-size-7">좋아요 <span class="like-count">{{ post.likes | default(0) }}</span>개</span>
-          </div>
         </div>
         {% endfor %}
       {% else %}
